<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">葩葩</string>
    <string name="action_settings">设置</string>
    <string name="hello_world">Hello world!</string>
    <string name="nav_desc">nav_desc</string>

    <!-- login -->
    <string name="login_weibo">微博登陆</string>
    <string name="login_qq">QQ登陆</string>
    <string name="login_email">Email 登陆</string>

</resources>